apps/base/goldpinger/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger-internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    # sidecar defaults HTTPRoutes to https; envoy-internal is http-only
    gatus.home-operations.com/endpoint: |
      group: Network
      url: http://goldpinger.j6n.internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - goldpinger.j6n.internal
  rules:
  - backendRefs:
    - name: goldpinger
      port: 8081
